fix(layout): double scroll

--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -1,8 +1,8 @@
 @import "../../../../assets/scss/partials/extras";
 
 :host {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
 }
 
